--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <!--Check out date-->
     <div class="icon-text-container">
-        <h3 class="fnt-area">When it will start?</h3>
+        <h3 class="fnt-area">When it will end?</h3>
         <form>
             <input type="date" class="form-input">
         </form>
